Added tests for factory, style and composite